# pensieve

./: README.md  fastrtc_tests.ipynb  index.html  main.py  pyproject.toml  report_generator.py  stt_server.py
static/: script.js  styles.css
whisper_streamer/: silero_vad_iterator.py  whisper_online.py
