[project]
name = "pensieve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "aiortc>=1.10.1",
    "faster-whisper>=1.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "librosa>=0.11.0",
    "numba>=0.61.0",
    "marimo>=0.11.23",
    "numpy<2.2",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "soundfile",
    "torch",
    "torchaudio",
    "transformers>=4.42.0",
    "yt-dlp>=2025.2.19",
    "fastapi[standard]>=0.115.11",
    "silero-vad>=5.1.2",
    "whisper-live==0.6.3",
    "pipecat-ai[whisper]>=0.0.52",
    "openai>=1.68.2",
    "nest-asyncio>=1.6.0",
    "modal>=0.73.116",
]
